force-app/main/default/objects/Test1__c/fields/avcs__c.field-meta.xml
<CustomField>
    <fullName>avcs__c</fullName>
    <label>avcs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>