force-app/main/default/objects/Test1__c/fields/obnce__c.field-meta.xml
<CustomField>
    <fullName>obnce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>obce</label>
    <type>Checkbox</type>
</CustomField>