force-app/main/default/objects/Test1__c/fields/test_field__c.field-meta.xml
<CustomField>
    <fullName>test_field__c</fullName>
    <label>test field</label>
    <type>AutoNumber</type>
</CustomField>